src/examples/test-doubles/ReturnArgumentExampleTest.php.out
./tools/phpunit tests/ReturnArgumentExampleTest.php
PHPUnit 10.2.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.10

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.41 MB

There was 1 error:

1) ReturnArgumentExampleTest::testReturnArgumentStub
PHPUnit\Framework\MockObject\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnArgumentExampleTest.php:9

--

There was 1 risky test:

1) ReturnArgumentExampleTest::testReturnArgumentStub
This test did not perform any assertions

/path/to/tests/ReturnArgumentExampleTest.php:6

ERRORS!
Tests: 1, Assertions: 0, Errors: 1, Risky: 1.
